# reedo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mvp.md
.claude/: CLAUDE.md
.github/workflows/: publish-npm.yml
docs/: architecture.md  configuration.md  dev-mode.md  file-explorer.md  git-integration.md  keybindings.md  syntax-highlighting.md  theming.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/reedo/: package.json
npm/win32-x64/: package.json
src/: app.rs  main.rs
src/config/: CLAUDE.md  settings.rs  theme.rs
src/editor/: CLAUDE.md  brackets.rs  buffer.rs  clipboard.rs  cursor.rs  input.rs  mod.rs  mode.rs  undo.rs
src/git/: CLAUDE.md  status.rs
src/syntax/: CLAUDE.md  highlight.rs  languages.rs  mod.rs
src/ui/: CLAUDE.md  fuzzy.rs  keybind_help.rs  mod.rs  render.rs  replace.rs  replace_project.rs  search.rs  search_project.rs  statusbar.rs  theme_switcher.rs  tree.rs  welcome.rs
