[package]
name = "reedo"
version = "0.1.0"
edition = "2021"
description = "A minimal terminal text editor"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
arboard = "3"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-c = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-php = "0.23"
tree-sitter-json = "0.24"
tree-sitter-go = "0.23"
tree-sitter-toml-ng = "0.6"
tree-sitter-yaml = "0.7"
tree-sitter-lua = "0.5"
tree-sitter-ruby = "0.23"
tree-sitter-zig = "1"
tree-sitter-make = "1"
nucleo-matcher = "0.3"
ignore = "0.4"
walkdir = "2"
